--- a/mundo2.html
+++ b/mundo2.html
@@ -9,6 +9,6 @@
 <body>
     <h4>Hola mundo 2</h4>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, qui animi architecto voluptas provident itaque culpa maiores cupiditate facilis fugit harum velit amet quidem ullam dignissimos quae, voluptatibus perspiciatis natus.</p>
-
+    <p>este es el segundo resumen</p>
 </body>
 </html>
