--- a/mundo.html
+++ b/mundo.html
@@ -6,9 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>Hola mundo 1</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, qui animi architecto voluptas provident itaque culpa maiores cupiditate facilis fugit harum velit amet quidem ullam dignissimos quae, voluptatibus perspiciatis natus.</p>
-    <p>Este seria el resumen parte 1</p>
-    <p>La siguiente semana continuaremos</p>
+    <h4>Hola mundo a Github</h4>
+    <p>Este es el primer cambio que subiremos a github con link ssh</p>
 </body>
 </html>
