explicacion del pull request para mejores practicas

--- a/mundo.html
+++ b/mundo.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h4>Hola mundo a Github</h4>
-    <p>Este es el primer cambio que subiremos a github con link ssh</p>
+    <p>Arreglamos un bug en la rama que creamos llamada fix bug
+        para tener buenas practicas.
+        una vez corregido guardamos cambios en el repositorio local
+        y lo mandamos con una nueva rama al repositorio remoto.
+        Antes de hacer un merge con la rama principal hare un pull request para que otro colaborador pueda dar una revision o confirmar lo realizado.
+    </p>
 </body>
 </html>
