modificamos la explicacion del texto mundo 2

--- a/mundo2.html
+++ b/mundo2.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h4>Hola mundo 2</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, qui animi architecto voluptas provident itaque culpa maiores cupiditate facilis fugit harum velit amet quidem ullam dignissimos quae, voluptatibus perspiciatis natus.</p>
-    <p>resumen</p>
-    <p>Este sera otro resumen en espera</p>
-</body>
+    <p>rebase nos permite modificar la historia de commits local para que aparesca una historia m&aacute;s limpia</p>
+    <p>ejemplo un proyecto con un historial de commits con reparaciones de errores no se veria muy bien</p>
+    <p>para ello usaremos el rebase de manera local antes de mandar al repositorio remoto</p>
+    <p>es rebase se realiza de la rama fixing(repara-bug) primero y luego a la rama principal</p>
+    <p>debemos tener cuidado con el rebase ya que cuando es un proyecto colaborativo podria generar un gran problema</p></body>
 </html>
