texto experimento de mundo2.html

--- a/mundo2.html
+++ b/mundo2.html
@@ -13,4 +13,7 @@
     <p>para ello usaremos el rebase de manera local antes de mandar al repositorio remoto</p>
     <p>es rebase se realiza de la rama fixing(repara-bug) primero y luego a la rama principal</p>
     <p>debemos tener cuidado con el rebase ya que cuando es un proyecto colaborativo podria generar un gran problema</p></body>
+
+    <p>texto experimento 1</p>
+    <p>texto experimento 2</p>
 </html>
