modificación texto experimento de mundo2.html

--- a/mundo2.html
+++ b/mundo2.html
@@ -14,6 +14,6 @@
     <p>es rebase se realiza de la rama fixing(repara-bug) primero y luego a la rama principal</p>
     <p>debemos tener cuidado con el rebase ya que cuando es un proyecto colaborativo podria generar un gran problema</p></body>
 
-    <p>texto experimento 1</p>
-    <p>texto experimento 2</p>
+    <p>experimento 1</p>
+    <p>experimento 2</p>
 </html>
