--- a/mundo3.html
+++ b/mundo3.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h4>Hola mundo 3</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, qui animi architecto voluptas provident itaque culpa maiores cupiditate facilis fugit harum velit amet quidem ullam dignissimos quae, voluptatibus perspiciatis natus.</p>
-
+    <p>Este es un cambio realizado mediante la dinamica de viernes 13/09/24</p>
 </body>
 </html>
