--- a/mundo3.html
+++ b/mundo3.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h4>Hola mundo 3</h4>
-    <p>Este es un cambio realizado mediante la dinamica de viernes 13/09/24</p>
+    <p>Este es un cambio realizado durante la dinamica de viernes 13/09/24</p>
+    <p>Este es un cambio remoto mediante github durante la dinamica de viernes 13/09/2024</p>
 </body>
 </html>
