Esto es una linea de prueba local

--- a/mundo3.html
+++ b/mundo3.html
@@ -11,5 +11,6 @@
     <p>Este es un cambio realizado mediante la dinamica de viernes 13/09/24</p>
     <p>segundo mensaje pero en rama experimento</p>
     <p>Este es un cambio remoto mediante en rama experimento github durante la dinamica de viernes 13/09/2024</p>
+    <p>pruba linea local rama experimento</p>
 </body>
 </html>
